syntax = "proto3";
package auth;
option go_package = "tablelink_test/proto/auth";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}
message LoginResponse {
  bool status = 1;
  string message = 2;
  Data data = 3;
  message Data {
    string access_token = 1;
  }
}
message LogoutRequest {
  string access_token = 1;
}
message LogoutResponse {
  bool status = 1;
  string message = 2;
} 